2012-05-29  Mark Pilgrim  <pilgrim@chromium.org>

        [Chromium] Move fileExists to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87531

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * chromium/public/Platform.h:
        (WebKit::Platform::fileExists):
        (Platform):

2012-05-29  Shawn Singh  <shawnsingh@chromium.org>

        [chromium] make WebTransformationMatrix object usable by non-webkit code
        https://bugs.webkit.org/show_bug.cgi?id=87315

        Reviewed by James Robinson.

        * chromium/public/WebTransformationMatrix.h:
        (WebKit::WebTransformationMatrix::~WebTransformationMatrix):
        (WebTransformationMatrix):

2012-05-25  Kinuko Yasuda  <kinuko@chromium.org>

        [chromium] Deprecate FileUtilities::getFileSize and getFileModifiedTime in favor of getFileMetadata
        https://bugs.webkit.org/show_bug.cgi?id=87492

        Reviewed by Adam Barth.

        * chromium/public/WebFileUtilities.h:

2012-05-25  Mark Pilgrim  <pilgrim@chromium.org>

        [Chomium] Move sandboxSupport to Platform.h
        https://bugs.webkit.org/show_bug.cgi?id=87518

        Reviewed by Adam Barth.

        Part of a refactoring series. See tracking bug 82948.

        * Platform.gypi:
        * chromium/public/Platform.h:
        (WebKit):
        (Platform):
        (WebKit::Platform::sandboxSupport):
        * chromium/public/android/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/linux/WebFontFamily.h: Added.
        (WebKit):
        (WebFontFamily):
        * chromium/public/linux/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/mac/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):
        * chromium/public/win/WebSandboxSupport.h: Added.
        (WebKit):
        (WebSandboxSupport):

2012-05-17  Andrey Kosyakov  <caseq@chromium.org>
