@@ -106,8 +106,6 @@ public:
     // Must return non-null.
     virtual WebFileSystem* fileSystem() { return 0; }
 
-    virtual bool fileExists(const WebString&) { return false; }
-
 
     // Gamepad -------------------------------------------------------------
 
