@@ -1,3 +1,15 @@
+2012-05-29  Mark Pilgrim  <pilgrim@chromium.org>
+
+        [Chromium] Move fileExists to Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=87531
+
+        Reviewed by Adam Barth.
+
+        Call fileExists through fileUtilities(), not directly.
+
+        * platform/chromium/FileSystemChromium.cpp:
+        (WebCore::fileExists):
+
 2012-05-29  Kentaro Hara  <haraken@chromium.org>
 
         Remove a dummy style sheet from CSSParser::parseFlowThread()
