@@ -5,6 +5,18 @@
 
         Reviewed by Adam Barth.
 
+        Call fileExists through fileUtilities(), not directly.
+
+        * chromium/public/Platform.h:
+        (Platform):
+
+2012-05-29  Mark Pilgrim  <pilgrim@chromium.org>
+
+        [Chromium] Move fileExists to Platform.h
+        https://bugs.webkit.org/show_bug.cgi?id=87531
+
+        Reviewed by Adam Barth.
+
         Part of a refactoring series. See tracking bug 82948.
 
         * chromium/public/Platform.h:
